<resources>
    <string name="app_name">ToDoListApp</string>
    <string name="button1">Da fare</string>
    <string name="button2">Archiviata</string>
    <string name="title">Titolo</string>
    <string name="body">Body</string>
    <string name="note">Note</string>
    <string name ="Choose_Color">Choose color</string>
    <string name="insert_note">Insert note</string>
    <string name="date_update">update date</string>
    <string name="date_term">term date</string>
    <string name="title_toolbar">ToDoList</string>
    <string name="add">add</string>
    <string name="delete">delete</string>
    <string name="menu">menu</string>
    <string name="modify">edit</string>
    <string name="date_creation">creation date</string>
    <string name="done">Ok</string>
    <string name="star">prefer</string>
    <string name="preference_file_key">todolistapp.LAYOUT_CONFIGURATION_KEY</string>
    <string name="name_app">ListToDoApp</string>
</resources>
